--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ranker",
   "version": "1.0.0",
   "main": "app.js",
-  "homepage": "https://[your-github-username].github.io/[your-repo-name]",
+  "homepage": "https://businistry.github.io/rankerlogic2",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
